--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>vai ser uma imagem</h1>
+    <header>
+        h1>vai ser uma imagem</h1>
     <ul>
         <li>Estudantes</li>
         <li>Escola</li>
     </ul>
+       </header>
 </body>
 </html>
