--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        h1>vai ser uma imagem</h1>
-    <ul>
-        <li>Estudantes</li>
-        <li>Escola</li>
-    </ul>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="imagem.png">
+        <ul: class="cabecalho-lista">
+            <li>Estudantes</li>
+            <li>Escola</li>
+        </ul>
        </header>
 </body>
 </html>
