--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="imagem.png">
+        <img class="cabecalho-imagem" src="imagemnarutao.png">
         <ul: class="cabecalho-lista">
             <li>Estudantes</li>
             <li>Escola</li>
