--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
             <li>Escola</li>
         </ul>
        </header>
+    <section class="escola-div-conteudo">
+        <div class="escola-div-conteudo">
+        <h2 class="escola-titulo">sobre a escola </h2>
+        <p class="escola-texto-um">lorem ipsum</p>
+        </div>
+        <img class="escola-imagem"src=>
+    </section>
+            
 </body>
 </html>
