--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p class="escola-texto-um">lorem ipsum</p>
                 <p class="escola-tenho-dois">lorem ipsum<p/>
      </div>
-        <img class="escola-imagem"src="arquivo.formato">
+        <img class="escola-imagem"src="narutohina.png">
     </section>
             
 </body>
