--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <section class=”estudantes”>
         <h2 class=”estudante-titulo”>Quem são nossos estudantes</h2>
         <img class=”estudante-imagem” src=”Marcelo.jpeg” alt=”foto do marcelo”>
-        <h3 class=”estudante-nome”>Marcelo</h3>
+        <h3 class=”estudante-nome”>Nilo</h3>
+        <div class="estudante-div">
+            <img class="estudante-imagem"
     </section>
 
 </body>
