--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
-<head>
+
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,14 +27,15 @@
      </div>
         <img class="escola-imagem"src="narutohina.png">
     </section>
-
     <section class=”estudantes”>
         <h2 class=”estudante-titulo”>Quem são nossos estudantes</h2>
-        <img class=”estudante-imagem” src=”Marcelo.jpeg” alt=”foto do marcelo”>
-        <h3 class=”estudante-nome”>Nilo</h3>
-        <div class="estudante-div">
-            <img class="estudante-imagem"
+        <div class="estudante-div
+            <img class=”estudante-imagem” src=”Marcelo.jpeg” alt=”foto do marcelo”>
+            <h3 class=”estudante-nome”>Nilo</h3>
+            <img class="estudante-icone"src="imagem.png">
+        </div>
     </section>
-
 </body>
-</html>
+</html>            
+
+
