--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <img class="estudante-icone"src="imagem.png">
         </div>
     </section>
+    
+    <footer class="rodape">
+         <h4 class="nome">Produzido por aluno</h4>
+      </footer>
 </body>
 </html>            
 
