--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="imagemnaru" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="imagem.png">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
@@ -22,27 +22,23 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
             <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série D. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="imagemnarutao.png">
     </section>
+    
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
         <div class="estudante-todos">
-        <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="imagem.png" 
+            <h3 class="estudante-nome">Naruto</h3>
+           <a href="https://www.alura.com.br"><img class="estudante-icone" src="instagram.png"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Gabi.jpg" alt="foto da gabi">
-            <h3 class="estudante-nome">Gabriela</h3>
-            <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="Narutohina.png" 
+            <h3 class="estudante-nome">Hinata</h3>
+            <a href="https://www.alura.com.br"><img class="estudante-icone" src="instagram.png"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
