--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
            <a href="https://www.alura.com.br"><img class="estudante-icone" src="instagram.png"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Narutohina.png" 
+            <img class="estudante-imagem" src="narutohina.png" 
             <h3 class="estudante-nome">Hinata</h3>
             <a href="https://www.alura.com.br"><img class="estudante-icone" src="instagram.png"></a>
         </div>
